--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section id="sobre-mim" class="sobre-mim">
             <div class="fundosobremim">
                 <h1 class="titulos">Sobre Mim</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nam, aspernatur quisquam doloribus, quas architecto aliquid facilis dicta est veritatis placeat Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, mollitia ullam, vero, ad dolor possimus reprehenderit dolorum perferendis repellat accusantium tenetur. Labore deserunt dolorum quis, enim facilis quasi hic asperiores.  delectus omnis excepturi. Quia debitis cumque illo ipsam quod. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui amet, sit delectus error explicabo ipsa dolorem, doloremque nam, consequuntur molestias fuga magni impedit nesciunt vitae magnam maiores sequi quis natus.  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim a voluptatem laudantium omnis maxime nulla architecto dolores voluptas sit, harum tenetur ullam inventore deserunt minus dicta accusantium nisi earum ab?</p>
+                <p>Eu me chamo Vitoria, tenho 15 anos estou tentando aprender a programar faço Desenvolvimento de Sistemas no PREMEN, gosto de ler, ouvir musica e pintar sou uma pessoa extrovertida, gosto de liderar apesar de não ser muito paciente, e nao sei oque escrever mais</p>
             </div>
         
         </section>
